--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Edu+QLD+Beginner:wght@700&family=Homemade+Apple&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Zen+Antique&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&family=Dela+Gothic+One&family=Edu+QLD+Beginner&family=Homemade+Apple&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Zen+Antique&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -18,105 +18,96 @@
 
 <body>
     <div class="main">
-        <header>
-            <nav>
-                <div class="logo">
-                    <img src="./assets/aasiana official logo.jpg" alt="Aasiana Aerotech Pvt Ltd">
-                </div>
+            <header>
+                <nav>
+                    <div class="logo">
+                        <img src="./assets/STICKER MATTER 2.1.PNG" alt="Aasiana Aerotech Pvt Ltd">
+                    </div>
 
-                <div class="navopt">
-                    <ul>
-                        <li class="nav-menu"><a href="/home">HOME</a></li>
-                        <li class="nav-menu"><a href="/services">SERVICES</a></li>
-                        <li class="nav-menu"><a href="/testimonials">TESTIMONIALS</a></li>
-                        <li class="nav-menu"><a href="/clients">CLIENTS</a></li>
-                        <li class="nav-menu"><a href="/about">ABOUT</a></li>
-                        <li class="nav-menu"><a href="/implinks">IMPORTANT LINKS</a></li>
-                        <li class="nav-menu"><a href="/contact">CONTACT</a></li>
-                        <li class="job-btn"><button>JOBS</button></li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
+                    <div class="navopt">
+                            <ul>
+                                <li class="nav-menu"><a href="#navhome">HOME</a></li>
+                                <li class="nav-menu"><a href="#navservices">SERVICES</a></li>
+                                <li class="nav-menu"><a href="#navtestimonials">TESTIMONIALS</a></li>
+                                <li class="nav-menu"><a href="#navclients">CLIENTS</a></li>
+                                <li class="nav-menu"><a href="#navabout">ABOUT</a></li>
+                                <li class="nav-menu"><a href="#navimplinks">IMPORTANT LINKS</a></li>
+                                <li class="nav-menu"><a href="#navcontact">CONTACT</a></li>
+                            </ul>
+                    </div>
+                    <div class="optjob">
+                        <button class="job-btn">JOBS</button>
+                    </div>
+                </nav>
+            </header>
 
-        <div class="homepage">
-            <div class="homepagemain">
-                <img src="./assets/Adobe Express - file.png" alt="official logo" class="homepageimg">
-                <h1 class="homepagetext">AASIANA AEROTECH PVT LTD</h1>
+            <div class="homepage">
+                <!-- <div class="homepagemain">
+                <h1 class="homepagetext" style="font-family: 'Dela Gothic One';">Aasiana Aerotech <div></div>Pvt Ltd</h1>
+            </div> -->
+
             </div>
-            
-        </div>
 
 
 
 
-
-        <div class="mainintro">
+        <div class="mainintro" id="navhome">
             <div class="textintro">
-                <h1 class="headingtextintro">AASIANA AEROTECH PVT LTD</h1>
-                <h3 class="descintro">Incepted in the Year 2000, AASIANA AEROTECH PVT LTD, is one of India's leading Aviation Ancillary Service Providers. Founded by members of the Aviation Fraternity the company has grown Leaps & Bounds in being the Service Provider of <b>"CHOICE"</b> for Leading Domestic & International Schedule & Non Scheduled Operators alike. Our goal of working with Limited Customers & Unlimited Services driven by the Motto <b>"The Answer is Yes; the Question ?"</b> has earned us many prestigious customers of National & International Repute.
-                    Having Offices in New Delhi AASIANA AEROTECH has spread its reach over the Countries Geographical reach and is able to serve its customers with the Shortest Turn around Time & in the most economical manner.<div> </div>
-                    <b>AASIANA AEROTECH is proud to be an Approved Flight Clearing Agency by the Directorate General of Civil Aviation</b></h3>
+                <h1 class="headingtextintro" style="font-family: 'Dela Gothic One';">AASIANA AEROTECH</h1>
+                <h3 class="descintro">Incepted in the Year 2000, AASIANA AEROTECH PVT LTD, is one of India's leading
+                    Aviation Ancillary Service Providers. Founded by members of the Aviation Fraternity the company has
+                    grown Leaps & Bounds in being the Service Provider of <b>"CHOICE"</b> for Leading Domestic &
+                    International Schedule & Non Scheduled Operators alike. Our goal of working with Limited Customers &
+                    Unlimited Services driven by the Motto <b>"The Answer is Yes; the Question ?"</b> has earned us many
+                    prestigious customers of National & International Repute.
+                    Having Offices in New Delhi AASIANA AEROTECH has spread its reach over the Countries Geographical
+                    reach and is able to serve its customers with the Shortest Turn around Time & in the most economical
+                    manner.
+                    <div class="desctext"><b>AASIANA AEROTECH is proud to be an Approved Flight Clearing Agency by the
+                            Directorate General of Civil Aviation</b></div>
+                </h3>
             </div>
         </div>
 
 
 
-        <div class="servicesmain">
+        <div class="servicesmain" id="navservices">
             <div class="service-heading">OUR SERVICES</div>
-            <div class="service-cards">
-                <div class="service-card">
-                    <div class="service-card-comp"><i class="fa-solid fa-plane-departure fa-xl" style="color: #b00337;"
-                            id="iconscc"></i></div>
-                    <div class="service-card-comp sccheading">Lorem ipsum dolor sit amet consectetur adipisicing elit
+            <div class="service-block">
+                <div class="service-card card1 section">
+                    <div class="servicecardimg"><img src="./assets/ground handling.webp" alt="ground handling" loading="lazy"></div>
+                    <div class="servicecardinfo">
+                        <div class="servicecardheading">ground handling</div>
+                        <div class="servicecardpara">"Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide."</div>
                     </div>
-                    <div class="service-card-comp scctextbox">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Quibusdam eligendi voluptatem temporibus illum, illo quis voluptatibus. Aliquam eum odio culpa
-                        officiis nisi, voluptatibus, eligendi doloribus rem eaque at repudiandae fugit?
-                        Dolore, maiores tempore nemo, at cumque repellendus sint harum repellat architecllat!</div>
                 </div>
-                <div class="service-card">
-                    <div class="service-card-comp"><i class="fa-solid fa-plane-departure fa-xl" style="color: #b00337;"
-                            id="iconscc"></i></div>
-                    <div class="service-card-comp sccheading">Lorem ipsum dolor sit amet consectetur adipisicing elit
+                <div class="service-card card2 section">
+                    <div class="servicecardimg"><img src="./assets/mainback1.JPG" alt="ground handling" loading="lazy"></div>
+                    <div class="servicecardinfo">
+                        <div class="servicecardheading">charter</div>
+                        <div class="servicecardpara">"Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide."</div>
                     </div>
-                    <div class="service-card-comp scctextbox">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Quibusdam eligendi voluptatem temporibus illum, illo quis voluptatibus. Aliquam eum odio culpa
-                        officiis nisi, voluptatibus, eligendi doloribus rem eaque at repudiandae fugit?
-                        Dolore, maiores tempore nemo, at cumque repellendus sint harum repellat architecllat!</div>
                 </div>
-                <div class="service-card">
-                    <div class="service-card-comp"><i class="fa-solid fa-plane-departure fa-xl" style="color: #b00337;"
-                            id="iconscc"></i></div>
-                    <div class="service-card-comp sccheading">Lorem ipsum dolor sit amet consectetur adipisicing elit
+                <div class="service-card card3 section">
+                    <div class="servicecardimg"><img src="./assets/aircraft aquisation.webp" alt="ground handling" loading="lazy"></div>
+                    <div class="servicecardinfo">
+                        <div class="servicecardheading">Aircraft Acquisition</div>
+                        <div class="servicecardpara">"Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide."</div>
                     </div>
-                    <div class="service-card-comp scctextbox">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Quibusdam eligendi voluptatem temporibus illum, illo quis voluptatibus. Aliquam eum odio culpa
-                        officiis nisi, voluptatibus, eligendi doloribus rem eaque at repudiandae fugit?
-                        Dolore, maiores tempore nemo, at cumque repellendus sint harum repellat architecllat!</div>
-                </div>
-                <div class="service-card">
-                    <div class="service-card-comp"><i class="fa-solid fa-plane-departure fa-xl" style="color: #b00337;"
-                            id="iconscc"></i></div>
-                    <div class="service-card-comp sccheading">Lorem ipsum dolor sit amet consectetur adipisicing elit
-                    </div>
-                    <div class="service-card-comp scctextbox">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Quibusdam eligendi voluptatem temporibus illum, illo quis voluptatibus. Aliquam eum odio culpa
-                        officiis nisi, voluptatibus, eligendi doloribus rem eaque at repudiandae fugit?
-                        Dolore, maiores tempore nemo, at cumque repellendus sint harum repellat architecllat!</div>
                 </div>
             </div>
         </div>
-        <div class="testimonialsmain">
+        <div class="testimonialsmain" id="navtestimonials">
         </div>
-        <div class="clientsmain">
+        <div class="clientsmain" id="navclients">
         </div>
-        <div class="aboutmain">
+        <div class="aboutmain" id="navabout">
         </div>
-        <div class="implink-contactmain">
+        <div class="implink-contactmain" id="navimplinks">
         </div>
 
     </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
