--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
             <div class="service-heading">OUR SERVICES</div>
             <div class="service-block">
                 <div class="service-card card1 section">
-                    <div class="servicecardimg"><img src="/ground handling.webp" alt="ground handling" loading="lazy"></div>
+                    <div class="servicecardimg"><img src="ground handling.webp" alt="ground handling" loading="lazy"></div>
                     <div class="servicecardinfo">
                         <div class="servicecardheading">ground handling</div>
                         <div class="servicecardpara">"Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide."</div>
                     </div>
                 </div>
                 <div class="service-card card2 section">
-                    <div class="servicecardimg"><img src="/mainback1.JPG" alt="ground handling" loading="lazy"></div>
+                    <div class="servicecardimg"><img src="mainback1.JPG" alt="ground handling" loading="lazy"></div>
                     <div class="servicecardinfo">
                         <div class="servicecardheading">charter</div>
                         <div class="servicecardpara">"Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide."</div>
                     </div>
                 </div>
                 <div class="service-card card3 section">
-                    <div class="servicecardimg"><img src="/aircraft aquisation.webp" alt="ground handling" loading="lazy"></div>
+                    <div class="servicecardimg"><img src="aircraft aquisation.webp" alt="ground handling" loading="lazy"></div>
                     <div class="servicecardinfo">
                         <div class="servicecardheading">Aircraft Acquisition</div>
                         <div class="servicecardpara">"Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide."</div>
