--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <header>
                 <nav>
                     <div class="logo">
-                        <img src="./assets/STICKER MATTER 2.1.PNG" alt="Aasiana Aerotech Pvt Ltd">
+                        <img src="STICKER MATTER 2.1.PNG" alt="Aasiana Aerotech Pvt Ltd">
                     </div>
 
                     <div class="navopt">
