--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <header>
                 <nav>
                     <div class="logo">
-                        <img src="STICKER MATTER 2.1.PNG" alt="Aasiana Aerotech Pvt Ltd">
+                        <img src="./assets/STICKER MATTER 2.1.PNG" alt="Aasiana Aerotech Pvt Ltd">
                     </div>
 
                     <div class="navopt">
                             <ul>
                                 <li class="nav-menu"><a href="#navhome">HOME</a></li>
                                 <li class="nav-menu"><a href="#navservices">SERVICES</a></li>
-                                <li class="nav-menu"><a href="#navtestimonials">TESTIMONIALS</a></li>
                                 <li class="nav-menu"><a href="#navclients">CLIENTS</a></li>
-                                <li class="nav-menu"><a href="#navabout">ABOUT</a></li>
+                                <li class="nav-menu"><a href="#navtestimonials">TESTIMONIALS</a></li>
+                                <!-- <li class="nav-menu"><a href="#navabout">ABOUT</a></li> -->
                                 <li class="nav-menu"><a href="#navimplinks">IMPORTANT LINKS</a></li>
                                 <li class="nav-menu"><a href="#navcontact">CONTACT</a></li>
                             </ul>
@@ -53,7 +53,7 @@
 
         <div class="mainintro" id="navhome">
             <div class="textintro">
-                <h1 class="headingtextintro" style="font-family: 'Dela Gothic One';">AASIANA AEROTECH</h1>
+                <h1 class="headingtextintro">AASIANA AEROTECH</h1>
                 <h3 class="descintro">Incepted in the Year 2000, AASIANA AEROTECH PVT LTD, is one of India's leading
                     Aviation Ancillary Service Providers. Founded by members of the Aviation Fraternity the company has
                     grown Leaps & Bounds in being the Service Provider of <b>"CHOICE"</b> for Leading Domestic &
@@ -77,33 +77,105 @@
                 <div class="service-card card1 section">
                     <div class="servicecardimg"><img src="ground handling.webp" alt="ground handling" loading="lazy"></div>
                     <div class="servicecardinfo">
-                        <div class="servicecardheading">ground handling</div>
-                        <div class="servicecardpara">"Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide."</div>
+                        <div class="servicecardheading">Aircraft aquisition</div>
+                        <div class="servicecardpara">"Aircraft Buying or selling is a complex process. It needs the comprehensive understanding of market conditions, aircraft availability, associated costs, maintenance requirements, legal provisions, and meticulous documentation for aircraft acquisition. Our professionals provide the best guidance for buying or selling the aircrafts."</div>
                     </div>
                 </div>
                 <div class="service-card card2 section">
                     <div class="servicecardimg"><img src="mainback1.JPG" alt="ground handling" loading="lazy"></div>
                     <div class="servicecardinfo">
-                        <div class="servicecardheading">charter</div>
-                        <div class="servicecardpara">"Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide."</div>
+                        <div class="servicecardheading">air charter</div>
+                        <div class="servicecardpara">"Fly Any time Any Where, with absolute privacy and dedicated safety.
+                            Our Aircrafts provide luxurious interiors, spacious seating, premium amenities and Relaxing and enjoyable journey.
+                            Our dedicated team of highly experienced professionals provide the best travel solutions and attentive service from start to finish."</div>
                     </div>
                 </div>
                 <div class="service-card card3 section">
                     <div class="servicecardimg"><img src="aircraft aquisation.webp" alt="ground handling" loading="lazy"></div>
                     <div class="servicecardinfo">
-                        <div class="servicecardheading">Aircraft Acquisition</div>
-                        <div class="servicecardpara">"Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide.Expert aviation consulting for seamless ground handling operations. We optimize efficiency, safety, and compliance, ensuring smooth turnaround times, cost savings, and exceptional service for airlines, airports, and ground service providers worldwide."</div>
+                        <div class="servicecardheading">Aviation Consultation & Liaisoning</div>
+                        <div class="servicecardpara">"To ensure seamless and efficient handling of day-to-day aviation-related processes, our team of highly experienced professionals specialize in liaising with key government agencies and authorities, including the DGCA, DGFT, BCAS, Airports Authority of India, and the Ministry of Civil Aviation thus providing the best suitable support and guidance."</div>
+                    </div>
+                </div>
+                <div class="service-card card4 section">
+                    <div class="servicecardimg"><img src="ground handling.webp" alt="ground handling" loading="lazy"></div>
+                    <div class="servicecardinfo">
+                        <div class="servicecardheading">India Landing and Overflying Permits</div>
+                        <div class="servicecardpara">"All General Aviation or business aircrafts operating to/from India require landing permits, regardless of the type of flight from the Directorate General of Civil Aviation (DGCA).
+                            Aasiana Aerotech a DGCA approved Flying Clearance Agency and we undertake India Landing and Overflying Permits from DGCA."</div>
                     </div>
                 </div>
             </div>
         </div>
+
+
+
+
         <div class="testimonialsmain" id="navtestimonials">
         </div>
         <div class="clientsmain" id="navclients">
         </div>
-        <div class="aboutmain" id="navabout">
+        <!-- <div class="aboutmain" id="navabout">
+        </div> -->
+        <div class="implink" id="navimplinks">
+            <div class="implink-heading">
+                important links
+            </div>
+            <div class="implink-images">
+                <span>
+                    <img src="./assets/official assets/DGCA LOGO.png" alt="DGCA" class="dgca">
+                </span>
+                <span>
+                    <img src="./assets/official assets/MCA LOGO 1.PNG" alt="" class="mca">
+                </span>
+                <span>
+                    <img src="./assets/official assets/BCAS LOGO.jpeg" alt="" class="bcas">
+                </span>
+                <span>
+                    <img src="./assets/official assets/AAI LOGO.png" alt="" class="aai">
+                </span>
+                <span>
+                    <img src="./assets/official assets/FAA LOGO.png" alt="" class="faa">
+                </span>
+                <span>
+                    <img src="./assets/official assets/IATA LOGO.png" alt="" class="iata">
+                </span>
+                <span>
+                    <img src="./assets/official assets/ACI LOGO.png" alt="" class="aci">
+                </span>
+                <span>
+                    <img src="./assets/official assets/ICAO LOGO.png" alt="" class="icao">
+                </span>
+            </div>
         </div>
-        <div class="implink-contactmain" id="navimplinks">
+        <div class="contactmain" id="navcontact">
+            <div class="contactheading">aasiana aerotech</div>
+            <div class="contactdetails">
+                <div class="contactinfo">
+                    <span class="contactinfo-heading">contact</span>
+                    <span class="contactinfo-detail">
+                        <span class="contactinfo-detail-email">info@aasiana.net</span>
+                        <span class="contactinfo-detail-phno">+919899300386</span>
+                    </span>
+                </div>
+                <div class="contactaddress">
+                    <span class="contactaddress-heading">address</span>
+                    <span class="contactaddress-content">E-131, 2nd Floor, 
+                        Mohammadpur, 
+                        New Delhi South West Delhi, 
+                        DL - 110066 IN</span>
+                </div>
+                <div class="socials">
+                    <span class="socials-heading"> socials</span>
+                    <div class="socialh">
+                        <a href="#" class="socialtag"><i class="fa-brands fa-instagram"></i>instagram</a>
+                        <a href="#" class="socialtag"><i class="fa-brands fa-facebook"></i>facebook</a>
+                        <a href="#" class="socialtag"><i class="fa-brands fa-linkedin"></i>linkedin</a>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="tm"> &#169; 2025 AASIANA AEROTECH Private Limited. All rights reserved.</div>
         </div>
 
     </div>
