--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <header>
                 <nav>
                     <div class="logo">
-                        <img src="STICKER MATTER 2.1.PNG" alt="Aasiana Aerotech Pvt Ltd">
+                        <img src="./assets/STICKER MATTER 2.1.PNG" alt="Aasiana Aerotech Pvt Ltd">
                     </div>
 
                     <div class="navopt">
@@ -36,7 +36,7 @@
                             </ul>
                     </div>
                     <div class="optjob">
-                        <button class="job-btn">JOBS</button>
+                        <button class="job-btn">REACH US</button>
                     </div>
                 </nav>
             </header>
@@ -123,28 +123,28 @@
             </div>
             <div class="implink-images">
                 <span>
-                    <img src="DGCA LOGO.png" alt="DGCA" class="dgca">
+                    <img src="./assets/official assets/DGCA LOGO.png" alt="DGCA" class="dgca">
                 </span>
                 <span>
-                    <img src="MCA LOGO 1.PNG" alt="" class="mca">
+                    <img src="./assets/official assets/MCA LOGO 1.PNG" alt="" class="mca">
                 </span>
                 <span>
-                    <img src="BCAS LOGO.jpeg" alt="" class="bcas">
+                    <img src="./assets/official assets/BCAS LOGO.jpeg" alt="" class="bcas">
                 </span>
                 <span>
-                    <img src="AAI LOGO.png" alt="" class="aai">
+                    <img src="./assets/official assets/AAI LOGO.png" alt="" class="aai">
                 </span>
                 <span>
-                    <img src="FAA LOGO.png" alt="" class="faa">
+                    <img src="./assets/official assets/FAA LOGO.png" alt="" class="faa">
                 </span>
                 <span>
-                    <img src="IATA LOGO.png" alt="" class="iata">
+                    <img src="./assets/official assets/IATA LOGO.png" alt="" class="iata">
                 </span>
                 <span>
-                    <img src="ACI LOGO.png" alt="" class="aci">
+                    <img src="./assets/official assets/ACI LOGO.png" alt="" class="aci">
                 </span>
                 <span>
-                    <img src="ICAO LOGO.png" alt="" class="icao">
+                    <img src="./assets/official assets/ICAO LOGO.png" alt="" class="icao">
                 </span>
             </div>
         </div>
@@ -175,7 +175,7 @@
                     
                 </div>
             </div>
-            <div class="tm"> &#169; 2025 AASIANA AEROTECH Private Limited. All rights reserved.</div>
+            <div class="tm"> &#169; 2025 AASIANA AEROTECH PRIVATE LIMITED. ALL RIGHTS RESERVED.</div>
         </div>
 
     </div>
