--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <header>
                 <nav>
                     <div class="logo">
-                        <img src="./assets/STICKER MATTER 2.1.PNG" alt="Aasiana Aerotech Pvt Ltd">
+                        <img src="STICKER MATTER 2.1.PNG" alt="Aasiana Aerotech Pvt Ltd">
                     </div>
 
                     <div class="navopt">
@@ -123,28 +123,28 @@
             </div>
             <div class="implink-images">
                 <span>
-                    <img src="./assets/official assets/DGCA LOGO.png" alt="DGCA" class="dgca">
+                    <img src="DGCA LOGO.png" alt="DGCA" class="dgca">
                 </span>
                 <span>
-                    <img src="./assets/official assets/MCA LOGO 1.PNG" alt="" class="mca">
+                    <img src="MCA LOGO 1.PNG" alt="" class="mca">
                 </span>
                 <span>
-                    <img src="./assets/official assets/BCAS LOGO.jpeg" alt="" class="bcas">
+                    <img src="BCAS LOGO.jpeg" alt="" class="bcas">
                 </span>
                 <span>
-                    <img src="./assets/official assets/AAI LOGO.png" alt="" class="aai">
+                    <img src="AAI LOGO.png" alt="" class="aai">
                 </span>
                 <span>
-                    <img src="./assets/official assets/FAA LOGO.png" alt="" class="faa">
+                    <img src="FAA LOGO.png" alt="" class="faa">
                 </span>
                 <span>
-                    <img src="./assets/official assets/IATA LOGO.png" alt="" class="iata">
+                    <img src="IATA LOGO.png" alt="" class="iata">
                 </span>
                 <span>
-                    <img src="./assets/official assets/ACI LOGO.png" alt="" class="aci">
+                    <img src="ACI LOGO.png" alt="" class="aci">
                 </span>
                 <span>
-                    <img src="./assets/official assets/ICAO LOGO.png" alt="" class="icao">
+                    <img src="ICAO LOGO.png" alt="" class="icao">
                 </span>
             </div>
         </div>
