--- a/index.html
+++ b/index.html
@@ -123,28 +123,28 @@
             </div>
             <div class="implink-images">
                 <span>
-                    <img src="DGCA LOGO.png" alt="DGCA" class="dgca">
+                    <a href="https://www.dgca.gov.in/digigov-portal/"><img src="./assets/official assets/DGCA LOGO.png" alt="DGCA" class="dgca"></a>
                 </span>
                 <span>
-                    <img src="MCA LOGO 1.PNG" alt="" class="mca">
+                    <a href="https://www.civilaviation.gov.in/"><img src="./assets/official assets/MCA LOGO 1.PNG" alt="" class="mca"></a>
                 </span>
                 <span>
-                    <img src="BCAS LOGO.jpeg" alt="" class="bcas">
+                    <a href="https://bcasindia.gov.in/#/"></a><img src="./assets/official assets/BCAS LOGO.jpeg" alt="" class="bcas">
                 </span>
                 <span>
-                    <img src="AAI LOGO.png" alt="" class="aai">
+                    <a href="https://www.aai.aero/"><img src="./assets/official assets/AAI LOGO.png" alt="" class="aai"></a>
                 </span>
                 <span>
-                    <img src="FAA LOGO.png" alt="" class="faa">
+                    <a href="https://www.faa.gov/"><img src="./assets/official assets/FAA LOGO.png" alt="" class="faa"></a>
                 </span>
                 <span>
-                    <img src="IATA LOGO.png" alt="" class="iata">
+                    <a href="https://www.iata.org/"><img src="./assets/official assets/IATA LOGO.png" alt="" class="iata"></a>
                 </span>
                 <span>
-                    <img src="ACI LOGO.png" alt="" class="aci">
+                    <a href="https://www.aci-europe.org/"><img src="./assets/official assets/ACI LOGO.png" alt="" class="aci"></a>
                 </span>
                 <span>
-                    <img src="ICAO LOGO.png" alt="" class="icao">
+                    <a href="https://www.icao.int/Pages/default.aspx"><img src="./assets/official assets/ICAO LOGO.png" alt="" class="icao"></a>
                 </span>
             </div>
         </div>
