--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             </ul>
                     </div>
                     <div class="optjob">
-                        <button class="job-btn">REACH US</button>
+                        <button class="job-btn">GET IN TOUCH</button>
                     </div>
                 </nav>
             </header>
