--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
                     <span class="contactinfo-heading">contact</span>
                     <span class="contactinfo-detail">
                         <span class="contactinfo-detail-email">info@aasiana.net</span>
-                        <span class="contactinfo-detail-phno">+919899300386</span>
+                        <span class="contactinfo-detail-phno">+91 11 4143 6115</span>
                     </span>
                 </div>
                 <div class="contactaddress">
                     <span class="contactaddress-heading">registered office</span>
                     <span class="contactaddress-content">E-131, Ganpati Bhavan, 2nd Floor, 
-                        Mohammadpur, 
+                        Madhavpur, 
                         New Delhi South West Delhi, 
                         DL - 110066 IN</span>
                 </div>
