--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <header>
                 <nav>
                     <div class="logo">
-                        <img src="./assets/STICKER MATTER 2.1.PNG" alt="Aasiana Aerotech Pvt Ltd">
+                        <img src="STICKER MATTER 2.1.PNG" alt="Aasiana Aerotech Pvt Ltd">
                     </div>
 
                     <div class="navopt">
@@ -65,7 +65,7 @@
                     </div>
                 </h3>
             </div>
-                <div class="plane"><img src="./assets/official assets/plane png.png" alt="" loading="lazy"></div>
+                <div class="plane"><img src="plane png.png" alt="" loading="lazy"></div>
         </div>
             
             
@@ -124,49 +124,49 @@
             <div class="implink-images">
                 <a href="https://www.dgca.gov.in/digigov-portal/">
                     <span>
-                        <img src="./assets/official assets/DGCA LOGO.png" alt="DGCA" class="dgca">
+                        <img src="DGCA LOGO.png" alt="DGCA" class="dgca">
                     </span>
                     <h4>Directorate General of Civil Aviation</h4>
                 </a>
                 <a href="https://www.civilaviation.gov.in/">
                     <span>
-                        <img src="./assets/official assets/MCA LOGO 1.PNG" alt="" class="mca">
+                        <img src="MCA LOGO 1.PNG" alt="" class="mca">
                     </span>
                     <h4>Ministry of Civil Aviation</h4>
                 </a>
                 <a href="https://bcasindia.gov.in/#/">
                     <span>
-                        <img src="./assets/official assets/BCAS LOGO.jpeg" alt="" class="bcas">
+                        <img src="BCAS LOGO.jpeg" alt="" class="bcas">
                     </span>
                     <h4>Bureau of Civil Aviation Security</h4>
                 </a>
                 <a href="https://www.aai.aero/">
                     <span>
-                        <img src="./assets/official assets/AAI LOGO.png" alt="" class="aai">
+                        <img src="AAI LOGO.png" alt="" class="aai">
                     </span>
                     <h4>Airports Authority of India</h4>
                 </a>
                 <a href="https://www.faa.gov/">
                     <span>
-                        <img src="./assets/official assets/FAA LOGO.png" alt="" class="faa">
+                        <img src="FAA LOGO.png" alt="" class="faa">
                     </span>
                     <h4>Federal Aviation Administration</h4>
                 </a>
                 <a href="https://www.iata.org/">
                     <span>
-                        <img src="./assets/official assets/IATA LOGO.png" alt="" class="iata">
+                        <img src="IATA LOGO.png" alt="" class="iata">
                     </span>
                     <h4>International Air Transport Association</h4>
                 </a>
                 <a href="https://www.aci-europe.org/">
                     <span>
-                        <img src="./assets/official assets/ACI LOGO.png" alt="" class="aci">
+                        <img src="ACI LOGO.png" alt="" class="aci">
                     </span>
                     <h4>Airports Council International</h4>
                 </a>
                 <a href="https://www.icao.int/Pages/default.aspx">
                     <span>
-                        <img src="./assets/official assets/ICAO LOGO.png" alt="" class="icao">
+                        <img src="ICAO LOGO.png" alt="" class="icao">
                     </span>
                     <h4>International Civil Aviation Organization</h4>
                 </a>
