--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 </nav>
             </header>
 
-            <!-- <div class="homepage">
-            </div> -->
+            <div class="homepage">
+            </div>
 
 
 
