--- a/index.html
+++ b/index.html
@@ -112,8 +112,24 @@
                 </div>
             </div>
         </div>
-                <div class="clientsmain" id="navclients" style="height: 100vh; background-color: antiquewhite;">
+                <div class="clientsmain" id="navclients">
+            <div class="clientheading">CLIENTS</div>
+            <div class="container">
+                <div class="imgclients"><img src="aero nomad.png" alt=""></div>
+                <div class="imgclients"><img src="atc red.jpg" alt=""></div>
+                <div class="imgclients"><img src="aviation horizon.jpg" alt=""></div>
+                <div class="imgclients"><img src="evelop.png" alt=""></div>
+                <div class="imgclients"><img src="fllypro.png" alt=""></div>
+                <div class="imgclients"><img src="flysky.png" alt=""></div>
+                <div class="imgclients"><img src="gss.png" alt=""></div>
+                <div class="imgclients"><img src="himalyan.png" alt=""></div>
+                <div class="imgclients"><img src="navyuga.png" alt=""></div>
+                <div class="imgclients"><img src="omega air.png" alt=""></div>
+                <div class="imgclients"><img src="sbs.png" alt=""></div>
+                <div class="imgclients"><img src="hal2.png" alt=""></div>
+            </div>
         </div>
+
 
 
         <div class="testimonialsmain" id="navtestimonials" style="height: 100vh;">
