--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
         </div>
 
 
-
         <div class="testimonialsmain" id="navtestimonials" style="height: 100vh;">
+            <h2 style="text-align: center; margin: 2rem; font-size: 32px ;">TESTIMONIALS</h2>
         </div>
 
-
         <div class="gallerymain" id="navgallery" >
+            <h2 style="text-align: center; margin: 2rem; font-size: 32px ;">SNAPSHOTS</h2>
             <div class="slider-container">
                 <div class="slider">
                     <div class="slide"><img src="WhatsApp Image 2025-03-10 at 20.45.39_56888fa4.jpg" alt="Slide 1"></div>
@@ -150,12 +150,6 @@
 
 
 
-        <div class="testimonialsmain" id="navtestimonials">
-        </div>
-        <div class="clientsmain" id="navclients">
-        </div>
-        <!-- <div class="aboutmain" id="navabout">
-        </div> -->
         <div class="implink" id="navimplinks">
             <div class="implink-heading">
                 important links
